<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorTransparent"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayarlar_baslik"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Metrik"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText">

        <RadioButton
            android:id="@+id/radioCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/celsius_ayar"
            android:textSize="20sp"
            android:textColor="@color/colorText"/>

        <RadioButton
            android:id="@+id/radioFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/fahrenheit_ayar"
            android:textSize="20sp"
            android:textColor="@color/colorText"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tema_ayar"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:text="@string/karanl_k_tema"
            android:textSize="20sp"
            android:textColor="@color/colorText"/>

    </LinearLayout>
</ScrollView>