<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorOnPrimary"
            android:textSize="72sp"
            android:layout_marginRight="50dp"/>

        <ImageView
            android:id="@+id/weather_icon_image_view"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_icon_description"
            android:src="@null" />
        <ImageView
            android:id="@+id/weather_refresh_image_view"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="50dp"
            android:background="@drawable/my_imageview_background"
            android:layout_height="match_parent"
            android:contentDescription="@string/refresh_button_content_desc"
            android:src="@drawable/baseline_autorenew_24"
            />
        <TextView
            android:id="@+id/tempIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="0sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/sehir_ismi"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/colorText"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/ulke_kodu_girin_opsiyonel"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/colorText"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnGet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/btn_getir"
            app:backgroundTint="@null"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorText"/>

        </ScrollView>
    </LinearLayout>
</LinearLayout>